src/pages/styles/dashboardcss.css
.dashboardMain {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
}

.dashboardSection {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.dashboardArticle {
  display: flex;
  flex-direction: column;
  padding: 1.25rem;
  width: 100%;
}

.dashboardHeader {
  align-self: start;
  margin-left: 1.75rem;
  font-size: 2.25rem;
  font-weight: bold;
  color: #1e3a8a;
}

.dashboardHeader hr {
  margin-top: 0.875rem;
  margin-left: 1.75rem;
  height: 0.125rem;
  border: 2px solid #1e3a8a;
  width: 600px;
  background-color: #1e3a8a;
}

.dashboardContent {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 3rem 2.5rem;
  margin-top: 1.5rem;
  background-color: #e0f2fe;
  border-radius: 3.5625rem;
  
}

.dashboardInnerContent {
  display: flex;
  flex-direction: column;
  padding: 3rem 4rem;
  background-color: white;
  border-radius: 3.5625rem;
  max-height: 500px; /* Set a maximum height */
  overflow-y: auto; /* Enable vertical scrolling if content exceeds max-height */
}

.dashboardInnerHeader {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
}

.dashboardInnerHeader h2 {
  margin-top: 0.5rem;
  font-size: 1.5rem;
  font-weight: 600;
  color: #1e3a8a;
}

.dashboardInnerHeader hr {
  margin-top: 0.375rem;
  height: 0.125rem;
  border: 2px solid #1e3a8a;
  background-color: #1e3a8a;
}

.dashboardSort {
  display: flex;
  gap: 1.25rem;
  justify-content: space-between;
  padding: 0.75rem 1rem;
  border: 1px solid #ef4444;
  border-radius: 0.25rem;
  color: #ef4444;
}

.dashboardSort img {
  aspect-ratio: 2.5;
  width: 15px;
}

.dashboardFooter {
  display: flex;
  gap: 0.5rem;
  margin-top: 1.25rem;
  flex-wrap: wrap;
}

.dashboardAside {
  display: flex;
  flex-direction: column;
  margin-left: 1.25rem;
  width: 100%;
}

.patientCard {
  display: flex;
  align-items: center;
  margin-top: 1.25rem;
  color: #1e3a8a;
}

.patientCardTime {
  display: flex;
  flex-direction: column;
  padding: 2.1rem 0.875rem;
  font-size: 0.875rem;
  margin-right: 5px;
  font-weight: 600;
  background-color: #e0f2fe;
  border-radius: 1.25rem 0 1.25rem 0;
  white-space: nowrap;
}

.patientCardTime p {
  margin: 0;
  justify-content: center;
  align-items: center;
  display: flex;
  font-weight: bold;
}

.patientCardMain {
  display: flex;
  align-items: center;
  gap: 0.625rem;
  padding: 0.375rem 0.875rem;
  background-color: #e0f2fe;
  flex-grow: 1;
}

.patientCardImage {
  flex-shrink: 0;
  border: 2px solid #e0f2fe;
  width: 86px;
}

.patientCardDetails {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  gap: 1.25rem;
  padding: 0.25rem 1.5rem; /* Adjusted padding */
  background-color: white;
  border-radius: 1.25rem;
  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1608); /* Added drop shadow */
}
.patientCardDetails p {
  margin: 0; /* Remove default margin for <p> elements */
}

.patientCardSection {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.patientCardName,
.patientCardAge,
.patientCardDiagnosis,
.patientCardMedication,
.patientCardAppointments {
  margin: 0;
  font-weight: bold;
}

.patientCardDiagnosisText {
  font-size: 0.875rem;
}

.patientCardOptions button {
  min-height: 106px;
  border: none;
  margin-left: 5px;
  min-width: 66px;
  justify-content: center;
  align-items: center;
}

.patientCardOptions button h3 {
  margin: 0;
  justify-content: center;
  align-items: center;
  display: flex;
  font-weight: 1000;
}

